MODON MRE BPDEV/force-app/main/default/objects/Block_Request__c/Block_Request__c.object-meta.xml
<CustomObject>
    <description>Object to be used to raise unit block request by the Sales Associates</description>
    <label>Block Request</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Block Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Block Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>