MODON MRE BPDEV/force-app/main/default/objects/Block_Request__c/fields/Hourstoblock__c.field-meta.xml
<CustomField>
    <fullName>Hourstoblock__c</fullName>
    <description>A field to store how many hours the unit is blocked</description>
    <label>Hours to block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 Min</fullName>
                <default>true</default>
                <label>20 Min</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>