MODON MRE BPDEV/force-app/main/default/objects/Block_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to its related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Block Requests</relationshipLabel>
    <relationshipName>Block_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>