MODON MRE BPDEV/force-app/main/default/objects/Block_Request__c/validationRules/Egypt_Block_Request_Create_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Egypt_Block_Request_Create_Validation</fullName>
    <active>true</active>
    <description>Check if the user has the permission to create Block Request.</description>
    <errorConditionFormula>AND(
 ISNEW(),
 ISPICKVAL( Source_Entity__c , &apos;Modon - Egypt&apos; ),
 NOT( $Permission.Egypt_Block_Request_Create_Permission )
)</errorConditionFormula>
    <errorMessage>You are not allowed to Create Block Request, because you don&apos;t have required permissions. Contact System Administrator to assign the permission set &apos;Egypt Sales Order Permissions&apos;.</errorMessage>
</ValidationRule>